--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,27 @@
 body {
-	background-image: url(Meadow.jpg);
+	background-image: url(Gingham.png);
     /*background-repeat: no-repeat; */
   background-attachment: fixed;
   background-size: 100%;
-  color: blue;
+  color: black;
   font-style: bold;
-  font-family: sans-serif;
-  margin-top: 300px;
-  margin-left: 200px;
-  margin-right: 200px;
-  margin-bottm: 400px;
+  font-family:'Courgette', cursive;
+  text-align: center;
 }
 h1 {
+	margin-top: 100px;
+	padding-top:  50px;
 font-size: 40px;
 font-style: bold;
 }
 .writing {
 	font-size: 36px;
-	font-family: sans-serif;
 }
  a {
  	text-align: right;
  }
-
+main {
+	background-color: white;
+	margin: auto;
+	width: 600px;
+}
